[tool.poetry]
name = "termtyper"
description = "A TUI based typing application"
authors = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"
python = "^3.10"
textual = "^0.1.15"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
termtyper = 'termtyper.__init__:main'
